fix gap between search tools and results

--- a/ckanext/kata/theme/public/css/kata.css
+++ b/ckanext/kata/theme/public/css/kata.css
@@ -1308,7 +1308,7 @@ a.download {
   top: 4px;
 }
 .search-results-list {
-  margin-top: 50px;
+  margin-top: 20px;
   margin-bottom: 50px;
 }
 .search-results-list .dataset-list .dataset-heading {
