--- a/ckanext/kata/theme/public/less/search.less
+++ b/ckanext/kata/theme/public/less/search.less
@@ -59,7 +59,7 @@
 }
 
 .search-results-list {
-  margin-top: 50px;
+  margin-top: 20px;
   margin-bottom: 50px;
   .dataset-list {
     .dataset-heading {
